Major rework. DBoW3 instead with fwd. declarations. Only g2o and OpenCV needed essentially. Needs more testing.

--- a/ORB_SLAM2Config.cmake.in
+++ b/ORB_SLAM2Config.cmake.in
@@ -1,3 +1,4 @@
 set(ORB_SLAM2_FOUND TRUE)
-set(ORB_SLAM2_PATH @ORB_SLAM2_PATH@)
+get_filename_component(ORB_SLAM2_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
+set(ORB_SLAM2_VOC_PATH @ORB_SLAM2_VOC_PATH@)
 include("${CMAKE_CURRENT_LIST_DIR}/ORB_SLAM2Targets.cmake")
